--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -1110,6 +1110,7 @@
   description: A highly advanced vending machine for buying cargo related clothing for free.
   components:
   - type: VendingMachine
+    equipOnEject: true
     pack: CargoDrobeInventory
     offState: off
     brokenState: broken
